Updates to Derek's sections

--- a/ipumsr_webinar.html
+++ b/ipumsr_webinar.html
@@ -189,18 +189,33 @@ is in sociology.
 
 .dan-pet2[]
 
-.kara-pet[]
+.kara-pet1[]
+
+.kara-pet2[]
 
 
 &lt;style&gt;
-.kara-pet {
+.kara-pet1 {
   background-color: #000000;
   background-image: url(images/Ru.jpg);
   background-size: cover;
-  width: 140px;
+  width: 120px;
   height: 160px;
   position: absolute;
-  left: 650px;
+  left: 600px;
+  bottom: 200px;
+}
+&lt;/style&gt;
+
+&lt;style&gt;
+.kara-pet2 {
+  background-color: #000000;
+  background-image: url(images/harvey.jpg);
+  background-size: cover;
+  width: 120px;
+  height: 160px;
+  position: absolute;
+  left: 730px;
   bottom: 200px;
 }
 &lt;/style&gt;
@@ -760,12 +775,12 @@ And finally...
 - It's fast!
   - Time to read 3 million rows with 13 variables:
 
-<div id="lgswjysjcp" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="zccdzvcuvi" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#lgswjysjcp .gt_table {
+#zccdzvcuvi .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -790,7 +805,7 @@ And finally...
   border-left-color: #D3D3D3;
 }
 
-#lgswjysjcp .gt_heading {
+#zccdzvcuvi .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -802,7 +817,7 @@ And finally...
   border-right-color: #D3D3D3;
 }
 
-#lgswjysjcp .gt_title {
+#zccdzvcuvi .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -812,7 +827,7 @@ And finally...
   border-bottom-width: 0;
 }
 
-#lgswjysjcp .gt_subtitle {
+#zccdzvcuvi .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -822,13 +837,13 @@ And finally...
   border-top-width: 0;
 }
 
-#lgswjysjcp .gt_bottom_border {
+#zccdzvcuvi .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#lgswjysjcp .gt_col_headings {
+#zccdzvcuvi .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -843,7 +858,7 @@ And finally...
   border-right-color: #D3D3D3;
 }
 
-#lgswjysjcp .gt_col_heading {
+#zccdzvcuvi .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -863,7 +878,7 @@ And finally...
   overflow-x: hidden;
 }
 
-#lgswjysjcp .gt_column_spanner_outer {
+#zccdzvcuvi .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -875,15 +890,15 @@ And finally...
   padding-right: 4px;
 }
 
-#lgswjysjcp .gt_column_spanner_outer:first-child {
+#zccdzvcuvi .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#lgswjysjcp .gt_column_spanner_outer:last-child {
+#zccdzvcuvi .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#lgswjysjcp .gt_column_spanner {
+#zccdzvcuvi .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -895,7 +910,7 @@ And finally...
   width: 100%;
 }
 
-#lgswjysjcp .gt_group_heading {
+#zccdzvcuvi .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -917,7 +932,7 @@ And finally...
   vertical-align: middle;
 }
 
-#lgswjysjcp .gt_empty_group_heading {
+#zccdzvcuvi .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -932,15 +947,15 @@ And finally...
   vertical-align: middle;
 }
 
-#lgswjysjcp .gt_from_md > :first-child {
+#zccdzvcuvi .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#lgswjysjcp .gt_from_md > :last-child {
+#zccdzvcuvi .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#lgswjysjcp .gt_row {
+#zccdzvcuvi .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -959,7 +974,7 @@ And finally...
   overflow-x: hidden;
 }
 
-#lgswjysjcp .gt_stub {
+#zccdzvcuvi .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -971,7 +986,7 @@ And finally...
   padding-left: 12px;
 }
 
-#lgswjysjcp .gt_summary_row {
+#zccdzvcuvi .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -981,7 +996,7 @@ And finally...
   padding-right: 5px;
 }
 
-#lgswjysjcp .gt_first_summary_row {
+#zccdzvcuvi .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -991,7 +1006,7 @@ And finally...
   border-top-color: #D3D3D3;
 }
 
-#lgswjysjcp .gt_grand_summary_row {
+#zccdzvcuvi .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -1001,7 +1016,7 @@ And finally...
   padding-right: 5px;
 }
 
-#lgswjysjcp .gt_first_grand_summary_row {
+#zccdzvcuvi .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -1011,11 +1026,11 @@ And finally...
   border-top-color: #D3D3D3;
 }
 
-#lgswjysjcp .gt_striped {
+#zccdzvcuvi .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#lgswjysjcp .gt_table_body {
+#zccdzvcuvi .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -1024,7 +1039,7 @@ And finally...
   border-bottom-color: #D3D3D3;
 }
 
-#lgswjysjcp .gt_footnotes {
+#zccdzvcuvi .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -1038,13 +1053,13 @@ And finally...
   border-right-color: #D3D3D3;
 }
 
-#lgswjysjcp .gt_footnote {
+#zccdzvcuvi .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#lgswjysjcp .gt_sourcenotes {
+#zccdzvcuvi .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -1058,41 +1073,41 @@ And finally...
   border-right-color: #D3D3D3;
 }
 
-#lgswjysjcp .gt_sourcenote {
+#zccdzvcuvi .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#lgswjysjcp .gt_left {
+#zccdzvcuvi .gt_left {
   text-align: left;
 }
 
-#lgswjysjcp .gt_center {
+#zccdzvcuvi .gt_center {
   text-align: center;
 }
 
-#lgswjysjcp .gt_right {
+#zccdzvcuvi .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#lgswjysjcp .gt_font_normal {
+#zccdzvcuvi .gt_font_normal {
   font-weight: normal;
 }
 
-#lgswjysjcp .gt_font_bold {
+#zccdzvcuvi .gt_font_bold {
   font-weight: bold;
 }
 
-#lgswjysjcp .gt_font_italic {
+#zccdzvcuvi .gt_font_italic {
   font-style: italic;
 }
 
-#lgswjysjcp .gt_super {
+#zccdzvcuvi .gt_super {
   font-size: 65%;
 }
 
-#lgswjysjcp .gt_footnote_marks {
+#zccdzvcuvi .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 65%;
@@ -1170,7 +1185,7 @@ interested in becoming a beta tester.
 ---
 class: center, middle
 
-# To run the code in this webinar
+# To run the code in this presentation
 
 ???
 
@@ -1841,8 +1856,8 @@ data$PHONE2 &lt;- lbl_na_if(data$PHONE, ~.val %in% c(0, 8)) %&gt;%
 
 . . . 
 
-<div id="htmlwidget-7357fc8a2a6d904de828" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-7357fc8a2a6d904de828">{"x":{"filter":"none","vertical":false,"data":[["[0] N/A","[1] No, no phone available","[2] Yes, phone available","[8] Suppressed (2012 and 2015 ACS)"],[null,"No, no phone available","Yes, phone available",null],[41133,30852,1404458,0]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>before ([val] label)<\/th>\n      <th>after<\/th>\n      <th>count<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"searching":false,"scrollY":"200px","scrollCollapse":true,"paging":false,"bInfo":false,"columnDefs":[{"className":"dt-right","targets":2}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-00c6eccbc64515e79d95" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-00c6eccbc64515e79d95">{"x":{"filter":"none","vertical":false,"data":[["[0] N/A","[1] No, no phone available","[2] Yes, phone available","[8] Suppressed (2012 and 2015 ACS)"],[null,"No, no phone available","Yes, phone available",null],[41133,30852,1404458,0]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>before ([val] label)<\/th>\n      <th>after<\/th>\n      <th>count<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"searching":false,"scrollY":"200px","scrollCollapse":true,"paging":false,"bInfo":false,"columnDefs":[{"className":"dt-right","targets":2}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
 
 ???
 `lbl_na_if()` supports a special syntax used by a few of ipumsr's label
@@ -1876,8 +1891,8 @@ data$PHONE2 &lt;- lbl_na_if(
 
 . . . 
 
-<div id="htmlwidget-7e03e2f12f75d6acdeef" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-7e03e2f12f75d6acdeef">{"x":{"filter":"none","vertical":false,"data":[["[0] N/A","[1] No, no phone available","[2] Yes, phone available","[8] Suppressed (2012 and 2015 ACS)"],[null,"No, no phone available","Yes, phone available",null],[41133,30852,1404458,0]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>before ([val] label)<\/th>\n      <th>after<\/th>\n      <th>count<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"searching":false,"scrollY":"200px","scrollCollapse":true,"paging":false,"bInfo":false,"columnDefs":[{"className":"dt-right","targets":2}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-56b46cf8ade95b0a202f" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-56b46cf8ade95b0a202f">{"x":{"filter":"none","vertical":false,"data":[["[0] N/A","[1] No, no phone available","[2] Yes, phone available","[8] Suppressed (2012 and 2015 ACS)"],[null,"No, no phone available","Yes, phone available",null],[41133,30852,1404458,0]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>before ([val] label)<\/th>\n      <th>after<\/th>\n      <th>count<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"searching":false,"scrollY":"200px","scrollCollapse":true,"paging":false,"bInfo":false,"columnDefs":[{"className":"dt-right","targets":2}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
 
 ???
 In case you're unfamiliar with the anonymous function notation, that squiggly 
@@ -1950,8 +1965,8 @@ data$EDUCD2 &lt;- lbl_collapse(data$EDUCD, ~.val %/% 10) %&gt;%
 
 . . .
 
-<div id="htmlwidget-1dbaad5487f47a59ddc9" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-1dbaad5487f47a59ddc9">{"x":{"filter":"none","vertical":false,"data":[["[0] N/A or no schooling","[1] N/A","[2] No schooling completed","[10] Nursery school to grade 4","[11] Nursery school, preschool","[12] Kindergarten","[13] Grade 1, 2, 3, or 4","[14] Grade 1","[15] Grade 2","[16] Grade 3","[17] Grade 4","[20] Grade 5, 6, 7, or 8","[21] Grade 5 or 6","[22] Grade 5","[23] Grade 6","[24] Grade 7 or 8","[25] Grade 7","[26] Grade 8","[30] Grade 9","[40] Grade 10","[50] Grade 11","[60] Grade 12","[61] 12th grade, no diploma","[62] High school graduate or GED","[63] Regular high school diploma","[64] GED or alternative credential","[65] Some college, but less than 1 year","[70] 1 year of college","[71] 1 or more years of college credit, no degree","[80] 2 years of college","[81] Associate's degree, type not specified","[82] Associate's degree, occupational program","[83] Associate's degree, academic program","[90] 3 years of college","[100] 4 years of college","[101] Bachelor's degree","[110] 5+ years of college","[111] 6 years of college (6+ in 1960-1970)","[112] 7 years of college","[113] 8+ years of college","[114] Master's degree","[115] Professional degree beyond a bachelor's degree","[116] Doctoral degree","[999] Missing"],["N/A or no schooling","N/A or no schooling","N/A or no schooling","Nursery school to grade 4","Nursery school to grade 4","Nursery school to grade 4","Nursery school to grade 4","Nursery school to grade 4","Nursery school to grade 4","Nursery school to grade 4","Nursery school to grade 4","Grade 5, 6, 7, or 8","Grade 5, 6, 7, or 8","Grade 5, 6, 7, or 8","Grade 5, 6, 7, or 8","Grade 5, 6, 7, or 8","Grade 5, 6, 7, or 8","Grade 5, 6, 7, or 8","Grade 9","Grade 10","Grade 11","Grade 12","Grade 12","Grade 12","Grade 12","Grade 12","Grade 12","1 year of college","1 year of college","2 years of college","2 years of college","2 years of college","2 years of college","3 years of college","4 years of college","4 years of college","5+ years of college","5+ years of college","5+ years of college","5+ years of college","5+ years of college","5+ years of college","5+ years of college","Missing"],[11811,50098,50114,40324,14976,14611,15871,10715,11500,11836,12399,27934,16637,12274,14020,28589,15962,40520,39440,46037,44797,67118,17653,170139,102651,12312,65168,13985,156110,12989,69752,9937,3888,6712,15917,147940,4280,3062,1303,1799,42621,13744,6898,0]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>before ([val] label)<\/th>\n      <th>after<\/th>\n      <th>count<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"searching":false,"scrollY":"200px","scrollCollapse":true,"paging":false,"bInfo":false,"columnDefs":[{"className":"dt-right","targets":2}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-1956bac26555defd0603" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-1956bac26555defd0603">{"x":{"filter":"none","vertical":false,"data":[["[0] N/A or no schooling","[1] N/A","[2] No schooling completed","[10] Nursery school to grade 4","[11] Nursery school, preschool","[12] Kindergarten","[13] Grade 1, 2, 3, or 4","[14] Grade 1","[15] Grade 2","[16] Grade 3","[17] Grade 4","[20] Grade 5, 6, 7, or 8","[21] Grade 5 or 6","[22] Grade 5","[23] Grade 6","[24] Grade 7 or 8","[25] Grade 7","[26] Grade 8","[30] Grade 9","[40] Grade 10","[50] Grade 11","[60] Grade 12","[61] 12th grade, no diploma","[62] High school graduate or GED","[63] Regular high school diploma","[64] GED or alternative credential","[65] Some college, but less than 1 year","[70] 1 year of college","[71] 1 or more years of college credit, no degree","[80] 2 years of college","[81] Associate's degree, type not specified","[82] Associate's degree, occupational program","[83] Associate's degree, academic program","[90] 3 years of college","[100] 4 years of college","[101] Bachelor's degree","[110] 5+ years of college","[111] 6 years of college (6+ in 1960-1970)","[112] 7 years of college","[113] 8+ years of college","[114] Master's degree","[115] Professional degree beyond a bachelor's degree","[116] Doctoral degree","[999] Missing"],["N/A or no schooling","N/A or no schooling","N/A or no schooling","Nursery school to grade 4","Nursery school to grade 4","Nursery school to grade 4","Nursery school to grade 4","Nursery school to grade 4","Nursery school to grade 4","Nursery school to grade 4","Nursery school to grade 4","Grade 5, 6, 7, or 8","Grade 5, 6, 7, or 8","Grade 5, 6, 7, or 8","Grade 5, 6, 7, or 8","Grade 5, 6, 7, or 8","Grade 5, 6, 7, or 8","Grade 5, 6, 7, or 8","Grade 9","Grade 10","Grade 11","Grade 12","Grade 12","Grade 12","Grade 12","Grade 12","Grade 12","1 year of college","1 year of college","2 years of college","2 years of college","2 years of college","2 years of college","3 years of college","4 years of college","4 years of college","5+ years of college","5+ years of college","5+ years of college","5+ years of college","5+ years of college","5+ years of college","5+ years of college","Missing"],[11811,50098,50114,40324,14976,14611,15871,10715,11500,11836,12399,27934,16637,12274,14020,28589,15962,40520,39440,46037,44797,67118,17653,170139,102651,12312,65168,13985,156110,12989,69752,9937,3888,6712,15917,147940,4280,3062,1303,1799,42621,13744,6898,0]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>before ([val] label)<\/th>\n      <th>after<\/th>\n      <th>count<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"searching":false,"scrollY":"200px","scrollCollapse":true,"paging":false,"bInfo":false,"columnDefs":[{"className":"dt-right","targets":2}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
 
 ???
 [Read bullet point]
@@ -2563,7 +2578,7 @@ these capabilities once the core functionality is well-tested and stable.
 
 
 ```r
-my_extract &lt;- define_extract(
+my_extract &lt;- define_extract_micro(
   "usa", 
   "Occupation by sex and age",
   c("us2017a", "us2018a"), 
@@ -2589,7 +2604,7 @@ Now let's get to some example code! We'll start with a brief example that shows
 a typical API workflow using the "pipe" operator from the magrittr package, 
 which is often used in conjunction with tidyverse packages such as dplyr.
 
-We start by defining an extract object using the `define_extract()` function, 
+We start by defining an extract object using the `define_extract_micro()` function, 
 and specifying 
 
 - a data collection -- in this case, "usa" 
@@ -2761,10 +2776,6 @@ client tools in the "ipumspy" module.
 
 If you are using ipumsr, the `define_extract_from_json()` function will create
 an extract object from a JSON-formatted definition shared by someone else.
-
-As Dan pointed out as we were preparing this webinar, this functionality could 
-also be useful for instructors who want to share an extract definition with 
-students for a class assignment.
 
 ---
 
