--- a/ipumsr_webinar_presenter_notes.html
+++ b/ipumsr_webinar_presenter_notes.html
@@ -526,8 +526,8 @@ test out the latest features.</p>
 not yet publicly available, but email IPUMS support at <a href="mailto:ipums@umn.edu" class="email">ipums@umn.edu</a> if you’re
 interested in becoming a beta tester.</p>
 </div>
-<div id="to-run-the-code-in-this-webinar-30" class="section level1">
-<h1>To run the code in this webinar (30)</h1>
+<div id="to-run-the-code-in-this-presentation-30" class="section level1">
+<h1>To run the code in this presentation (30)</h1>
 <p>Repeat: slides/recording will be available. To run this code yourself
 you can clone/download the repo from our github. This provides the data
 extracts you’ll need.</p>
@@ -1076,9 +1076,6 @@ in-development IPUMS API client tools in the “ipumspy” module.</p>
 <p>If you are using ipumsr, the <code>define_extract_from_json()</code>
 function will create an extract object from a JSON-formatted definition
 shared by someone else.</p>
-<p>As Dan pointed out as we were preparing this webinar, this
-functionality could also be useful for instructors who want to share an
-extract definition with students for a class assignment.</p>
 </div>
 <div id="overview-89" class="section level1">
 <h1>Overview (89)</h1>
