--- a/ipumsr_webinar.html
+++ b/ipumsr_webinar.html
@@ -499,7 +499,7 @@ Looked at relationship between degrees of hearing impairment and mortality rates
 .pull-right[
 
 
-- **IGIS** Shapefiles for admin level 2
+- **IHGIS** Shapefiles for admin level 2
 
 - https://ihgis.ipums.org/
 
@@ -824,12 +824,12 @@ And finally...
 - It's fast!
   - Time to read 3 million rows with 13 variables:
 
-<div id="ieuxjgqfnl" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<div id="yxcmdrubcx" style="overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
 <style>html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
 }
 
-#ieuxjgqfnl .gt_table {
+#yxcmdrubcx .gt_table {
   display: table;
   border-collapse: collapse;
   margin-left: auto;
@@ -854,7 +854,7 @@ And finally...
   border-left-color: #D3D3D3;
 }
 
-#ieuxjgqfnl .gt_heading {
+#yxcmdrubcx .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -866,7 +866,7 @@ And finally...
   border-right-color: #D3D3D3;
 }
 
-#ieuxjgqfnl .gt_title {
+#yxcmdrubcx .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -876,7 +876,7 @@ And finally...
   border-bottom-width: 0;
 }
 
-#ieuxjgqfnl .gt_subtitle {
+#yxcmdrubcx .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -886,13 +886,13 @@ And finally...
   border-top-width: 0;
 }
 
-#ieuxjgqfnl .gt_bottom_border {
+#yxcmdrubcx .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#ieuxjgqfnl .gt_col_headings {
+#yxcmdrubcx .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -907,7 +907,7 @@ And finally...
   border-right-color: #D3D3D3;
 }
 
-#ieuxjgqfnl .gt_col_heading {
+#yxcmdrubcx .gt_col_heading {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -927,7 +927,7 @@ And finally...
   overflow-x: hidden;
 }
 
-#ieuxjgqfnl .gt_column_spanner_outer {
+#yxcmdrubcx .gt_column_spanner_outer {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -939,15 +939,15 @@ And finally...
   padding-right: 4px;
 }
 
-#ieuxjgqfnl .gt_column_spanner_outer:first-child {
+#yxcmdrubcx .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#ieuxjgqfnl .gt_column_spanner_outer:last-child {
+#yxcmdrubcx .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#ieuxjgqfnl .gt_column_spanner {
+#yxcmdrubcx .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -959,7 +959,7 @@ And finally...
   width: 100%;
 }
 
-#ieuxjgqfnl .gt_group_heading {
+#yxcmdrubcx .gt_group_heading {
   padding: 8px;
   color: #333333;
   background-color: #FFFFFF;
@@ -981,7 +981,7 @@ And finally...
   vertical-align: middle;
 }
 
-#ieuxjgqfnl .gt_empty_group_heading {
+#yxcmdrubcx .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -996,15 +996,15 @@ And finally...
   vertical-align: middle;
 }
 
-#ieuxjgqfnl .gt_from_md > :first-child {
+#yxcmdrubcx .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#ieuxjgqfnl .gt_from_md > :last-child {
+#yxcmdrubcx .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#ieuxjgqfnl .gt_row {
+#yxcmdrubcx .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -1023,7 +1023,7 @@ And finally...
   overflow-x: hidden;
 }
 
-#ieuxjgqfnl .gt_stub {
+#yxcmdrubcx .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -1035,7 +1035,7 @@ And finally...
   padding-left: 12px;
 }
 
-#ieuxjgqfnl .gt_summary_row {
+#yxcmdrubcx .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -1045,7 +1045,7 @@ And finally...
   padding-right: 5px;
 }
 
-#ieuxjgqfnl .gt_first_summary_row {
+#yxcmdrubcx .gt_first_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -1055,7 +1055,7 @@ And finally...
   border-top-color: #D3D3D3;
 }
 
-#ieuxjgqfnl .gt_grand_summary_row {
+#yxcmdrubcx .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -1065,7 +1065,7 @@ And finally...
   padding-right: 5px;
 }
 
-#ieuxjgqfnl .gt_first_grand_summary_row {
+#yxcmdrubcx .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -1075,11 +1075,11 @@ And finally...
   border-top-color: #D3D3D3;
 }
 
-#ieuxjgqfnl .gt_striped {
+#yxcmdrubcx .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#ieuxjgqfnl .gt_table_body {
+#yxcmdrubcx .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -1088,7 +1088,7 @@ And finally...
   border-bottom-color: #D3D3D3;
 }
 
-#ieuxjgqfnl .gt_footnotes {
+#yxcmdrubcx .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -1102,13 +1102,13 @@ And finally...
   border-right-color: #D3D3D3;
 }
 
-#ieuxjgqfnl .gt_footnote {
+#yxcmdrubcx .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding: 4px;
 }
 
-#ieuxjgqfnl .gt_sourcenotes {
+#yxcmdrubcx .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -1122,41 +1122,41 @@ And finally...
   border-right-color: #D3D3D3;
 }
 
-#ieuxjgqfnl .gt_sourcenote {
+#yxcmdrubcx .gt_sourcenote {
   font-size: 90%;
   padding: 4px;
 }
 
-#ieuxjgqfnl .gt_left {
+#yxcmdrubcx .gt_left {
   text-align: left;
 }
 
-#ieuxjgqfnl .gt_center {
+#yxcmdrubcx .gt_center {
   text-align: center;
 }
 
-#ieuxjgqfnl .gt_right {
+#yxcmdrubcx .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#ieuxjgqfnl .gt_font_normal {
+#yxcmdrubcx .gt_font_normal {
   font-weight: normal;
 }
 
-#ieuxjgqfnl .gt_font_bold {
+#yxcmdrubcx .gt_font_bold {
   font-weight: bold;
 }
 
-#ieuxjgqfnl .gt_font_italic {
+#yxcmdrubcx .gt_font_italic {
   font-style: italic;
 }
 
-#ieuxjgqfnl .gt_super {
+#yxcmdrubcx .gt_super {
   font-size: 65%;
 }
 
-#ieuxjgqfnl .gt_footnote_marks {
+#yxcmdrubcx .gt_footnote_marks {
   font-style: italic;
   font-weight: normal;
   font-size: 65%;
@@ -1885,8 +1885,8 @@ data$PHONE2 &lt;- lbl_na_if(data$PHONE, ~.val %in% c(0, 8)) %&gt;%
 
 . . . 
 
-<div id="htmlwidget-62eed9fd87194a3070da" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-62eed9fd87194a3070da">{"x":{"filter":"none","vertical":false,"data":[["[0] N/A","[1] No, no phone available","[2] Yes, phone available","[8] Suppressed (2012 and 2015 ACS)"],[null,"No, no phone available","Yes, phone available",null],[41133,30852,1404458,0]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>before ([val] label)<\/th>\n      <th>after<\/th>\n      <th>count<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"searching":false,"scrollY":"200px","scrollCollapse":true,"paging":false,"bInfo":false,"columnDefs":[{"className":"dt-right","targets":2}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-0a816e03523078df030d" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-0a816e03523078df030d">{"x":{"filter":"none","vertical":false,"data":[["[0] N/A","[1] No, no phone available","[2] Yes, phone available","[8] Suppressed (2012 and 2015 ACS)"],[null,"No, no phone available","Yes, phone available",null],[41133,30852,1404458,0]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>before ([val] label)<\/th>\n      <th>after<\/th>\n      <th>count<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"searching":false,"scrollY":"200px","scrollCollapse":true,"paging":false,"bInfo":false,"columnDefs":[{"className":"dt-right","targets":2}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
 
 ???
 `lbl_na_if()` supports a special syntax used by a few of ipumsr's label
@@ -1920,8 +1920,8 @@ data$PHONE2 &lt;- lbl_na_if(
 
 . . . 
 
-<div id="htmlwidget-477e10d4d2f095f6f548" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-477e10d4d2f095f6f548">{"x":{"filter":"none","vertical":false,"data":[["[0] N/A","[1] No, no phone available","[2] Yes, phone available","[8] Suppressed (2012 and 2015 ACS)"],[null,"No, no phone available","Yes, phone available",null],[41133,30852,1404458,0]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>before ([val] label)<\/th>\n      <th>after<\/th>\n      <th>count<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"searching":false,"scrollY":"200px","scrollCollapse":true,"paging":false,"bInfo":false,"columnDefs":[{"className":"dt-right","targets":2}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-ef8ebfeae036904066b9" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-ef8ebfeae036904066b9">{"x":{"filter":"none","vertical":false,"data":[["[0] N/A","[1] No, no phone available","[2] Yes, phone available","[8] Suppressed (2012 and 2015 ACS)"],[null,"No, no phone available","Yes, phone available",null],[41133,30852,1404458,0]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>before ([val] label)<\/th>\n      <th>after<\/th>\n      <th>count<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"searching":false,"scrollY":"200px","scrollCollapse":true,"paging":false,"bInfo":false,"columnDefs":[{"className":"dt-right","targets":2}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
 
 ???
 In case you're unfamiliar with the anonymous function notation, that squiggly 
@@ -1994,8 +1994,8 @@ data$EDUCD2 &lt;- lbl_collapse(data$EDUCD, ~.val %/% 10) %&gt;%
 
 . . .
 
-<div id="htmlwidget-716915c28988aa71e608" style="width:100%;height:auto;" class="datatables html-widget"></div>
-<script type="application/json" data-for="htmlwidget-716915c28988aa71e608">{"x":{"filter":"none","vertical":false,"data":[["[0] N/A or no schooling","[1] N/A","[2] No schooling completed","[10] Nursery school to grade 4","[11] Nursery school, preschool","[12] Kindergarten","[13] Grade 1, 2, 3, or 4","[14] Grade 1","[15] Grade 2","[16] Grade 3","[17] Grade 4","[20] Grade 5, 6, 7, or 8","[21] Grade 5 or 6","[22] Grade 5","[23] Grade 6","[24] Grade 7 or 8","[25] Grade 7","[26] Grade 8","[30] Grade 9","[40] Grade 10","[50] Grade 11","[60] Grade 12","[61] 12th grade, no diploma","[62] High school graduate or GED","[63] Regular high school diploma","[64] GED or alternative credential","[65] Some college, but less than 1 year","[70] 1 year of college","[71] 1 or more years of college credit, no degree","[80] 2 years of college","[81] Associate's degree, type not specified","[82] Associate's degree, occupational program","[83] Associate's degree, academic program","[90] 3 years of college","[100] 4 years of college","[101] Bachelor's degree","[110] 5+ years of college","[111] 6 years of college (6+ in 1960-1970)","[112] 7 years of college","[113] 8+ years of college","[114] Master's degree","[115] Professional degree beyond a bachelor's degree","[116] Doctoral degree","[999] Missing"],["N/A or no schooling","N/A or no schooling","N/A or no schooling","Nursery school to grade 4","Nursery school to grade 4","Nursery school to grade 4","Nursery school to grade 4","Nursery school to grade 4","Nursery school to grade 4","Nursery school to grade 4","Nursery school to grade 4","Grade 5, 6, 7, or 8","Grade 5, 6, 7, or 8","Grade 5, 6, 7, or 8","Grade 5, 6, 7, or 8","Grade 5, 6, 7, or 8","Grade 5, 6, 7, or 8","Grade 5, 6, 7, or 8","Grade 9","Grade 10","Grade 11","Grade 12","Grade 12","Grade 12","Grade 12","Grade 12","Grade 12","1 year of college","1 year of college","2 years of college","2 years of college","2 years of college","2 years of college","3 years of college","4 years of college","4 years of college","5+ years of college","5+ years of college","5+ years of college","5+ years of college","5+ years of college","5+ years of college","5+ years of college","Missing"],[11811,50098,50114,40324,14976,14611,15871,10715,11500,11836,12399,27934,16637,12274,14020,28589,15962,40520,39440,46037,44797,67118,17653,170139,102651,12312,65168,13985,156110,12989,69752,9937,3888,6712,15917,147940,4280,3062,1303,1799,42621,13744,6898,0]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>before ([val] label)<\/th>\n      <th>after<\/th>\n      <th>count<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"searching":false,"scrollY":"200px","scrollCollapse":true,"paging":false,"bInfo":false,"columnDefs":[{"className":"dt-right","targets":2}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-24beb8426b5cdfc54c13" style="width:100%;height:auto;" class="datatables html-widget"></div>
+<script type="application/json" data-for="htmlwidget-24beb8426b5cdfc54c13">{"x":{"filter":"none","vertical":false,"data":[["[0] N/A or no schooling","[1] N/A","[2] No schooling completed","[10] Nursery school to grade 4","[11] Nursery school, preschool","[12] Kindergarten","[13] Grade 1, 2, 3, or 4","[14] Grade 1","[15] Grade 2","[16] Grade 3","[17] Grade 4","[20] Grade 5, 6, 7, or 8","[21] Grade 5 or 6","[22] Grade 5","[23] Grade 6","[24] Grade 7 or 8","[25] Grade 7","[26] Grade 8","[30] Grade 9","[40] Grade 10","[50] Grade 11","[60] Grade 12","[61] 12th grade, no diploma","[62] High school graduate or GED","[63] Regular high school diploma","[64] GED or alternative credential","[65] Some college, but less than 1 year","[70] 1 year of college","[71] 1 or more years of college credit, no degree","[80] 2 years of college","[81] Associate's degree, type not specified","[82] Associate's degree, occupational program","[83] Associate's degree, academic program","[90] 3 years of college","[100] 4 years of college","[101] Bachelor's degree","[110] 5+ years of college","[111] 6 years of college (6+ in 1960-1970)","[112] 7 years of college","[113] 8+ years of college","[114] Master's degree","[115] Professional degree beyond a bachelor's degree","[116] Doctoral degree","[999] Missing"],["N/A or no schooling","N/A or no schooling","N/A or no schooling","Nursery school to grade 4","Nursery school to grade 4","Nursery school to grade 4","Nursery school to grade 4","Nursery school to grade 4","Nursery school to grade 4","Nursery school to grade 4","Nursery school to grade 4","Grade 5, 6, 7, or 8","Grade 5, 6, 7, or 8","Grade 5, 6, 7, or 8","Grade 5, 6, 7, or 8","Grade 5, 6, 7, or 8","Grade 5, 6, 7, or 8","Grade 5, 6, 7, or 8","Grade 9","Grade 10","Grade 11","Grade 12","Grade 12","Grade 12","Grade 12","Grade 12","Grade 12","1 year of college","1 year of college","2 years of college","2 years of college","2 years of college","2 years of college","3 years of college","4 years of college","4 years of college","5+ years of college","5+ years of college","5+ years of college","5+ years of college","5+ years of college","5+ years of college","5+ years of college","Missing"],[11811,50098,50114,40324,14976,14611,15871,10715,11500,11836,12399,27934,16637,12274,14020,28589,15962,40520,39440,46037,44797,67118,17653,170139,102651,12312,65168,13985,156110,12989,69752,9937,3888,6712,15917,147940,4280,3062,1303,1799,42621,13744,6898,0]],"container":"<table class=\"display\">\n  <thead>\n    <tr>\n      <th>before ([val] label)<\/th>\n      <th>after<\/th>\n      <th>count<\/th>\n    <\/tr>\n  <\/thead>\n<\/table>","options":{"searching":false,"scrollY":"200px","scrollCollapse":true,"paging":false,"bInfo":false,"columnDefs":[{"className":"dt-right","targets":2}],"order":[],"autoWidth":false,"orderClasses":false}},"evals":[],"jsHooks":[]}</script>
 
 ???
 [Read bullet point]
